@@ -17,7 +17,7 @@
 /*
  * John's version number.
  */
-#define JOHN_VERSION			"1.7.9.2"
+#define JOHN_VERSION			"1.7.9.3"
 
 /*
  * Notes to packagers of John for *BSD "ports", Linux distributions, etc.:
@@ -186,21 +186,31 @@
 
 /*
  * Password hash table thresholds.  These are the counts of entries required
- * to enable the corresponding hash table size.
+ * to enable the corresponding bitmap size.  The corresponding hash table size
+ * may be smaller as determined by PASSWORD_HASH_SHR.
  */
 #define PASSWORD_HASH_THRESHOLD_0	3
 #define PASSWORD_HASH_THRESHOLD_1	3
 #define PASSWORD_HASH_THRESHOLD_2	(PASSWORD_HASH_SIZE_1 / 25)
 #define PASSWORD_HASH_THRESHOLD_3	(PASSWORD_HASH_SIZE_2 / 20)
-#define PASSWORD_HASH_THRESHOLD_4	PASSWORD_HASH_SIZE_3
-#define PASSWORD_HASH_THRESHOLD_5	(PASSWORD_HASH_SIZE_4 / 10)
-#define PASSWORD_HASH_THRESHOLD_6	(PASSWORD_HASH_SIZE_5 / 6)
+#define PASSWORD_HASH_THRESHOLD_4	(PASSWORD_HASH_SIZE_3 / 10)
+#define PASSWORD_HASH_THRESHOLD_5	(PASSWORD_HASH_SIZE_4 / 15)
+#define PASSWORD_HASH_THRESHOLD_6	(PASSWORD_HASH_SIZE_5 / 5)
 
 /*
  * Tables of the above values.
  */
 extern int password_hash_sizes[PASSWORD_HASH_SIZES];
 extern int password_hash_thresholds[PASSWORD_HASH_SIZES];
+
+/*
+ * How much smaller should the hash tables be than bitmaps in terms of entry
+ * count.  Setting this to 0 will result in them having the same number of
+ * entries, 1 will make the hash tables twice smaller than bitmaps, etc.
+ * 5 or 6 will make them the same size in bytes on systems with 32-bit or
+ * 64-bit pointers, respectively.
+ */
+#define PASSWORD_HASH_SHR		2
 
 /*
  * Cracked password hash size, used while loading.
